--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@mdx-js/react": "^1.5.1",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "2.23.12",
+    "gatsby-cli": "^2.12.67",
     "gatsby-image": "^2.0.39",
     "gatsby-plugin-feed-mdx": "^1.0.0",
     "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-mdx": "^1.2.14",
     "gatsby-plugin-netlify-cms": "^4.3.7",
-    "gatsby-plugin-offline": "^2.0.25",
+    "gatsby-plugin-offline": "^3.2.21",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-styled-components": "^3.0.7",
